--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 .Rproj.user
+R/bc-sd61-popn/sd61_kids_cache/
